--- a/Donors2.css
+++ b/Donors2.css
@@ -1,9 +1,7 @@
-  html {
-    background-image: url("https://www.mywealthtrace.com/individualtheme/images/Lock.jpg");
-     background-size:cover;
-}
-
-
+ html{
+    background-image: url("http://www.marmaragundem.org/wp-content/uploads/2011/11/bronx_logo_resim.jpg");
+     background-size: 400px 500px;
+      background-repeat: no-repeat;
 
 
 
