--- a/results_ST.css
+++ b/results_ST.css
@@ -66,8 +66,9 @@ div{
 }
 
 html{
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Network_Community_Structure.svg/220px-Network_Community_Structure.svg.png");
-     background-size:
+    background-image: url("http://www.marmaragundem.org/wp-content/uploads/2011/11/bronx_logo_resim.jpg");
+     background-size: 400px 500px;
+      background-repeat: no-repeat;
 }
 
 p{
